--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Political-History-of-England-Volume-I-of-12-From-the-Earliest-Times-to-the-Norman-Conques__68870
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68870-h/images/cover.jpg
 creator:
   author:
     agent_name: Hodgkin, Thomas
@@ -22,6 +25,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/6864
     wikipedia: http://en.wikipedia.org/wiki/Reginald_Lane-Poole
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68870#The-Political-History-of-England-Volume-I-of-12-From-the-Earliest-Times-to-the-Norman-Conques_
 gutenberg_issued: '2022-08-30'
 identifiers:
   gutenberg: '68870'
